--- a/SE/static/index.html
+++ b/SE/static/index.html
@@ -2,13 +2,13 @@
     <head>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <link href="https://fonts.googleapis.com/css?family=Lato:900|Montserrat|Roboto&display=swap" rel="stylesheet">
-        <link rel="stylesheet" type="text/css" href="/static/corecss.css">
+        <link rel="stylesheet" type="text/css" href="/static/styles/corecss.css">
     </head>
     <body>
         <div class="slideshow">
-            <img src="/static/wallpaper1.jpg" id="slide-image-0">
-            <img src="/static/wallpaper2.jpg" id="slide-image-1">
-            <img src="/static/wallpaper3.jpg" id="slide-image-2">
+            <img src="/static/images/wallpaper1.jpg" id="slide-image-0">
+            <img src="/static/images/wallpaper2.jpg" id="slide-image-1">
+            <img src="/static/images/wallpaper3.jpg" id="slide-image-2">
         </div>
         <div class="white-overlay">
 
