--- a/SE/static/customize.html
+++ b/SE/static/customize.html
@@ -7,7 +7,13 @@
 	<link href="https://fonts.googleapis.com/css?family=Lato:900|Montserrat|Roboto&display=swap" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="/static/styles/customstyles.css">
 	<link rel="stylesheet" type="text/css" href="/static/styles/navbar.css">
-	
+	<script>
+		
+		if(document.cookie.split("=")[0]!="loggedIn"){
+			location.href="/login"
+		}
+		
+	</script>
 </head>
 <body>
 
@@ -192,6 +198,8 @@
 	</div>
 
 	<script>
+
+
             var componentToggle = false
             var widgetToggle = false
             var selectedFrame = null
