--- a/SE/static/index.html
+++ b/SE/static/index.html
@@ -11,7 +11,7 @@
             <div class="left-bar">
                 <span><i class="material-icons">home</i><a href="#">Home</a></span>
                 <span><i class="material-icons">person</i><a href="http://127.0.0.1:4000/profile">Profile</a></span>
-			    <span><i class="material-icons">list_alt</i><a href="javascript:redirect('events')">Events</a></span>
+			    <span><i class="material-icons">list_alt</i><a href="http://127.0.0.1:4000/events">Events</a></span>
             </div>
             <div class="right-bar">
                 <span><a href="#">Login</a></span>
