--- a/static/index.html
+++ b/static/index.html
@@ -10,8 +10,9 @@
         <div class="navbar">
             <div class="left-bar">
                 <span><i class="material-icons">home</i><a href="#">Home</a></span>
-                <span><i class="material-icons">person</i><a href="http://127.0.0.1:5000/profile">Profile</a></span>
-			    <span><i class="material-icons">list_alt</i><a href="http://127.0.0.1:5000/events">Events</a></span>
+                <span><i class="material-icons">person</i><a href="http://localhost:5000/profile">Profile</a></span>
+                <span><i class="material-icons">list_alt</i><a href="http://localhost:5000/events/0000">Create Event</a></span>
+                <span><i class="material-icons">list_alt</i><a href="http://localhost:5000/event-listings">All Events</a></span>
             </div>
             <div class="right-bar">
                 <span><a href="#">Login</a></span>
