--- a/static/event_listings.html
+++ b/static/event_listings.html
@@ -2,12 +2,15 @@
 <html>
 <head>
 	<title>Donation Aggregator Service</title>
-	<link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet">
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+	<link href="https://fonts.googleapis.com/css?family=Lato:900|Montserrat|Roboto&display=swap" rel="stylesheet">
+	  <link rel="stylesheet" type="text/css" href="/static/styles/navbar.css">
 	<style type="text/css">
 		html
 		{
 			scroll-behavior: smooth;
+			height:1000px;
 		}
 		body
 		{
@@ -26,8 +29,8 @@
 			position: fixed;
 			width: 100%;
 			height: 100%;
-			background-image: url("res/bg1.jpg");
-			background-color: #999;
+			background-image: url("/static/images/bg1.jpg");
+			background-color: #3e8e3e;
 			filter: blur(20px);
 			z-index: -5;
 			background-size: cover;
@@ -396,6 +399,7 @@
 			overflow: hidden;
 			margin-bottom: 50px;
 			transition-duration: 0.5s;
+			cursor: pointer;
 		}
 		.eventlisting:hover
 		{
@@ -405,7 +409,7 @@
 		.cover
 		{
 			/*background-image: linear-gradient(to-top,rgba(0,0,0,0),rgba(0,0,0,0.5));*/
-			background-image: linear-gradient(rgba(0,0,0,0),rgba(0,0,0,0) 30%,rgba(0,0,0,1) 70%,rgba(0,0,0,1));
+			background-image: linear-gradient(rgba(0,0,0,0),rgba(0,0,0,0) 30%,rgba(0,0,0,0.9) 70%,rgba(0,0,0,0.9));
 			width: 100%;
 			height: 200px;
 			position: relative;
@@ -454,20 +458,15 @@
 <body onscroll="bgchange(event);">
 	<div class="bgimage"></div>
 
-	<div class="topdock">
-		<div class="centertopbar">	
-			<div class="menuitem">
-				+ ME
-			</div>
-			<div class="menuitem">
-				DONATIONS
-			</div>
-			<div class="menuitem">
-				EVENTS
-			</div>
-			<div class="menuitem">
-				PROFILE
-			</div>
+	<div class="navbar">
+		<div class="left-bar">
+			<span><i class="material-icons">home</i><a href="#">Home</a></span>
+			<span><i class="material-icons">person</i><a href="http://localhost:5000/profile">Profile</a></span>
+			<span><i class="material-icons">list_alt</i><a href="http://localhost:5000/events/0000">Create Event</a></span>
+			<span><i class="material-icons">list_alt</i><a href="http://localhost:5000/event-listings">All Events</a></span>
+		</div>
+		<div class="right-bar">
+			<span><a href="#">Login</a></span>
 		</div>
 	</div>
 	<div class="searchbubble">
@@ -512,13 +511,22 @@
 			xhr.open("GET","/search/"+query);
 			xhr.send();
 		}
-		function generateListing(eid,etitle,eorganizer,tags,elocation,edate,ebackground)
+		function generateListing(cid,eid,etitle,eorganizer,tags,elocation,edate,ebackground)
 		{
 			pardiv=document.querySelector(".contentbody");
+			
 			listing=document.createElement("div");
+			listing.id=eid+"/"+cid;
+			listing.onclick=function(){
+				location.href = "http://localhost:5000/events/"+this.id.split("/")[0]
+			}
+			listing.oncontextmenu = function(e){
+				e.preventDefault()
+				location.href = "http://localhost:5000/profile/"+this.id.split("/")[1]
+			}
 			listing.className="eventlisting";
 			listing.style.backgroundImage="url('"+ebackground+"')";
-			listing.id=eid;
+			
 
 			listing_temp = '<div class="cover"><div class="title" onclick="getEventPage(eid);">'+etitle+'</div><div class="eventorganizer">'+eorganizer+'</div><br><div class="tagcontainer">'
 
@@ -564,19 +572,22 @@
 			if(this.readyState==4 && this.status==200)
 			{
 				events = JSON.parse(this.responseText);
+				console.log(events)
 				for(i in events)
 				{
 					event = events[i];
 					generateListing(
+							event['cid'],
 							event['eid'],
 							event['event-title'],
 							event['foundation-name'],
 							event['tags'],
-							event['location'],
-							event['date'],
-							'data:image/png;base64, '+event['image'],
+							event['location-name'],
+							event['event-date'],
+							'data:image/png;base64,'+event['cover-picture'],
 						)
 				}
+				initbgs();
 			}
 		}
 
@@ -584,23 +595,26 @@
 		bgs=[];
 		function initbgs()
 		{
-			bgs=[];
 			bgelements=document.querySelectorAll(".eventlisting");
+			console.log(bgelements,$(".eventlisting"))
 			for(i=0;i<bgelements.length;i++)
 			{	
 				bgs.push(bgelements[i].style.backgroundImage);
 			}
 
-			console.log(bgs);
+			console.log("backgrounds",bgs);
 		}
-		initbgs();
+
+		
 		function bgchange(event)
 		{
+			
 			bgimage=document.querySelector(".bgimage");
 			offset=scrollY+200;
 			// bgindex=parseInt(offset/250)
 			bgindex=parseInt((getScrollPercent()/100)*bgs.length);
 			bgimage.style.backgroundImage=bgs[bgindex];
+			console.log(parseInt(offset/250))
 		}
 	</script>
 </body>
